infra/k8s/apps/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recovery-api
  namespace: recovery
  labels:
    app: recovery-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: recovery-api

  template:
    metadata:
      labels:
        app: recovery-api

    spec:
      containers:
        - name: api
          image: sanchar127/ingestion-service:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health # ✅ correct for production
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health # ✅ correct for production
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
