infra/k8s/apps/ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: recovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion
  template:
    metadata:
      labels:
        app: ingestion
    spec:
      containers:
        - name: ingestion
          image: ingestion-service
          imagePullPolicy: Never

          workingDir: /app
