infra/k8s/apps/trend-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trend-consumer
  namespace: recovery

spec:
  replicas: 1

  selector:
    matchLabels:
      app: trend-consumer

  template:
    metadata:
      labels:
        app: trend-consumer

    spec:
      containers:
        - name: trend-consumer

          image: trend-consumer-service
          imagePullPolicy: IfNotPresent

          workingDir: /app
