infra/k8s/apps/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: recovery
spec:
  selector:
    app: ingestion
  ports:
    - port: 80
      targetPort: 8001
